// Fixed the footer align center

--- a/src/sass/main_sass/main_style.sass
+++ b/src/sass/main_sass/main_style.sass
@@ -410,7 +410,7 @@ body
   &__text
     color: $text_inactive
     font-family: bluecurve-regular
-    font-size: 2vw
+    font-size: 3vw
 
 .logo-link-holder
   display: flex
@@ -428,6 +428,11 @@ body
     text-decoration: none
     filter: brightness(0) saturate(100%) invert(55%) sepia(6%) saturate(19%) hue-rotate(339deg) brightness(100%) contrast(85%)
     transition: 0.5s ease-in-out
+  &__text
+    color: $text_inactive
+    font-family: bluecurve-regular
+    font-size: 3vw
+    margin-bottom: 0
 
 
 .legal-content-holder-vertical-layout
@@ -459,7 +464,7 @@ body
     height: auto
   .logo-link-holder
     &__img
-      width: 10%
+      width: 20%
   #top-page-mobile
     display: flex
   #top-page
